@@ -1,5 +1,11 @@
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/language-specs/php.lang: many improvements (here-doc
+	strings, numbers highlighting, string variables, ...) based on a patch
+	by Eric Norige on bug #448513.
+
+2007-08-25  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/gtksourcebuffer.c:
 	* gtksourceview/language-specs/desktop.lang:
 
